--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ excerpt_separator: <!--more-->
 # Your site's domain goes here (eg: //mmistakes.github.io, https://mademistakes.com, etc)
 # When testing locally leave blank or use https://localhost:4000
 
-url: https://aronbordin.com/neo-hpstr-jekyll-theme
+url: '#'
 
 # draw your top menu here
 # each item must have a title and a url.
