fix: Public raw site working

--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ menu:
     url: '/'
 #  - title: 'Install'
 #    url: 'https://github.com/aron-bordin/neo-hpstr-jekyll-theme#installation'
-  - title: 'Tags'
-    url: '/tags'
-  - title: 'Categories'
-    url: '/categories'
-    type: 'categories'
-  - title: 'Favorites'
-    url: 
+#  - title: 'Tags'
+#    url: '/tags'
+#  - title: 'Categories'
+#    url: '/categories'
+#    type: 'categories'
+#  - title: 'Favorites'
+    url:
     submenu:
       - title: 'Code Highlighter'
         url: '/intro/code-highlighting-post/'
