--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ defaults:
       comments: "true"
 
 # Serving
-url: ""
+url: "laconicdata.com"
 baseurl: ""
 
 # Includes
@@ -78,4 +78,3 @@ excerpt_separator: <!--more-->
 sass:
   sass_dir: assets/partials
   style: compressed
-
