new: Edited style of code highlight syntax

--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,11 @@ paginate_path: "/page:num/"
 
 # Conversion
 markdown: kramdown
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  
 excerpt_separator: <!--more-->
 
 # Assets Settings
