--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Angelo Candari
 job_title: Data Analyst
 email: angelocandari@gmail.com
 description: Data represents reality and it is my job to make that connection so that others can make smarter decisions. I love Statistics, Python and working with people to find simple explanations to solve complex problems.
-avatar: http://laconicdata.com/assets/img/avatar.jpg
+avatar: https://laconicdata.com/assets/img/avatar.jpg
 favicon: /favicon.ico
 twitter_handler: your_handler
 analytics_code: UA-XXXXXXX-2
