--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ name: Angelo Candari
 job_title: Data Analyst
 email: angelocandari@gmail.com
 description: Data represents reality and it is my job to make that connection so that others can make smarter decisions. I love Statistics, Python and working with people to find simple explanations to solve complex problems.
-avatar: https://laconicdata.com/assets/img/avatar.jpg
-favicon: https://laconicdata.com/assets/img/favicon.jpg
+avatar: /assets/img/avatar.jpg
+favicon: /assets/img/favicon.ico
 twitter_handler: your_handler
 analytics_code: UA-XXXXXXX-2
 disqus: your_disqus_site
