--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Data represents reality and it is my job to make that connection so
 avatar: /assets/img/avatar.jpg
 favicon: /assets/img/favicon.png
 twitter_handler: your_handler
-analytics_code: UA-XXXXXXX-2
+# analytics_code: UA-XXXXXXX-2
 tagmanager_code: GTM-PQJJDKS
 disqus: your_disqus_site
 
