--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General Settings
 name: Angelo Candari
-job_title: Data Scientist
+job_title: Data Analyst | GA4 Expert | Tag Specialist | BigQuery SQL Developer
 email: angelocandari@gmail.com
 description: Data represents reality and it is my job to make that connection so that others can make smarter decisions. I love Statistics, Python and working with people to find simple explanations to solve complex problems.
 avatar: /assets/img/avatar.jpg
