--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # General Settings
 name: Angelo Candari
-job_title: Data Analyst | GA4 Expert | BigQuery SQL Developer
+job_title: Data Analyst | BigQuery SQL Developer
 email: angelocandari@gmail.com
-description: Data represents reality and it is my job to make that connection so that others can make smarter decisions. I love Statistics, Python and working with people to find simple explanations to solve complex problems.
+description: Decide what you want to become and do that everyday.
 avatar: /assets/img/avatar.jpg
 favicon: /assets/img/favicon.png
 twitter_handler: your_handler
